Adding footer link to conference and app pages

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<script src="js/model/SWDFCommandStore.js" type="text/javascript"></script>
 		<script src="js/model/DBLPCommandStore.js" type="text/javascript"></script>
 		<script src="js/model/DDGoCommandStore.js" type="text/javascript"></script>
-		<script src="js/model/GoogleCommandStore.js." type="text/javascript"></script>
+		<script src="js/model/GoogleCommandStore.js" type="text/javascript"></script>
 
 
 		<!-- EntryPoint -->
