--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
 		<!--<link rel="stylesheet" href="css/themes/A.min.css" />
 		<link rel="stylesheet" href="css/themes/B.min.css" />
 		<link rel="stylesheet" href="css/themes/C.min.css" />-->
-		<link rel="stylesheet" href="css/themes/D.min.css" />
+		<link rel="stylesheet" href="css/themes/C.min.css" />
 		<link rel="stylesheet" href="css/appStyle.css" />
 		
 		<!-- JQuery - JQueryMobile-->
 		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 		<script src="js/lib/jqm-config.js"></script>
 		<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
-
+	
 		<!-- Time -->
 		<script src="js/lib/moment.min.js"  type="text/javascript"></script> 
+		
+		<!-- JStorage -->
+		<script src="js/lib/store.js"  type="text/javascript"></script> 
 		
 		<!-- Graph --> 
         <script src="js/lib/arbor.js"></script>
@@ -40,7 +43,9 @@
 		<script src="js/model/DBLPCommandStore.js" type="text/javascript"></script>
 		<script src="js/model/DDGoCommandStore.js" type="text/javascript"></script>
 		<script src="js/model/GoogleCommandStore.js" type="text/javascript"></script>
-
+		
+		<!-- Local Storage -->
+		<script src="js/localStorage/localStorageManager.js" type="text/javascript"></script>
 
 		<!-- EntryPoint -->
 		<script src="js/entryPoint/main.js" type="text/javascript"></script>
@@ -52,7 +57,8 @@
 		
 		<!-- view -->
 		<script src="js/view/AbstractView.js" type="text/javascript"></script>
-		<script src="js/view/Backbone-Jquery-ui-mobile-Adapter.js" type="text/javascript"></script>
+		<script src="js/view/ViewAdapter.js" type="text/javascript"></script>
+		<script src="js/view/ViewAdapter.Graph.js" type="text/javascript"></script>
 	
 		
 		<!-- Configuration -->
