--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
 		<!-- SteelsSheet and themes -->
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
+		<link rel="stylesheet" href="css/jquery.mobile-1.3.0.min.css" />
 		<!--<link rel="stylesheet" href="css/themes/A.min.css" />
 		<link rel="stylesheet" href="css/themes/B.min.css" />
 		<link rel="stylesheet" href="css/themes/C.min.css" />-->
@@ -15,12 +15,15 @@
 		<link rel="stylesheet" href="css/appStyle.css" />
 		
 		<!-- JQuery - JQueryMobile-->
-		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+		<script src="js/lib/jquery-1.9.1.min.js"></script>
 		<script src="js/lib/jqm-config.js"></script>
-		<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
+		<script src="js/lib/jquery.mobile-1.3.0.min.js"></script>
 	
 		<!-- Time -->
 		<script src="js/lib/moment.min.js"  type="text/javascript"></script> 
+		
+		<!-- String encoder -->
+		<script src="js/encoding/Encoder.js"  type="text/javascript"></script> 
 		
 		<!-- JStorage -->
 		<script src="js/lib/store.js"  type="text/javascript"></script> 
@@ -32,8 +35,8 @@
 		<script src="js/view/arborGraph.js" type="text/javascript"></script>	
 		
 		<!-- BackBone -->
-		<script src="http://ajax.cdnjs.com/ajax/libs/json2/20110223/json2.js"></script>
-		<script src="js/lib/underscore.js" type="text/javascript" charset="utf-8"></script> 
+		<script src="js/lib/json2.min.js"></script>
+		<script src="js/lib/underscore-min.js" type="text/javascript" charset="utf-8"></script> 
 		<script src="js/lib/backbone.js" type="text/javascript" charset="utf-8"></script>
 		
  
@@ -43,6 +46,7 @@
 		<script src="js/model/DBLPCommandStore.js" type="text/javascript"></script>
 		<script src="js/model/DDGoCommandStore.js" type="text/javascript"></script>
 		<script src="js/model/GoogleCommandStore.js" type="text/javascript"></script>
+		<script src="js/model/DPCommandStore.js" type="text/javascript"></script>
 		
 		<!-- Local Storage -->
 		<script src="js/localStorage/localStorageManager.js" type="text/javascript"></script>
@@ -60,6 +64,10 @@
 		<script src="js/view/ViewAdapter.js" type="text/javascript"></script>
 		<script src="js/view/ViewAdapter.Graph.js" type="text/javascript"></script>
 	
+		<!-- Qrcode Scan -->
+		<script src="js/qrScan/GetUserMedia.js" type="text/javascript"></script>
+		<script src="js/lib/llqrcode.js" type="text/javascript" charset="utf-8"></script> 
+		
 		
 		<!-- Configuration -->
 		<script src="js/configuration/Configuration.js" type="text/javascript"></script>
